--- a/style.css
+++ b/style.css
@@ -16,16 +16,14 @@
 
 
 .hero-links a {
-    border: 3px solid red;
     font-size: 18px;
     margin-right: 30px;
 }
 
 .inline-wrapper {
-    border: 5px solid red;
     display: flex;
     flex-wrap: wrap;
-    gap: 460px
+    gap: 1000px
 }
 
 .hero-text {
@@ -35,7 +33,6 @@
 
 
 .header-div {
-    border: 10px solid red;
     display: flex;  
     flex-wrap: wrap;
     margin-top: 90px;
@@ -44,15 +41,14 @@
 }
 
 .child1 {
-    border: 5px solid blue;
     margin-left: 100px;
     flex: 1;
 }
 .child2 {
-     border: 5px solid blue;
-    flex: 1 ; 
+    flex: 1;
     margin-left: 40px;
-    margin-right: 70px;
+    margin-right: 100px;
+    text-align: center;
 }
 
 .child1 .head {
@@ -87,33 +83,28 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    border: 6px solid #3882F6;
-    padding: 0 200px;
-    gap: 10px;
+    padding: 0 400px;
+    gap: 50px;
     margin-bottom: 100px;
 }
 .item1 {
-    border: 3px solid red;
     padding: 10px;
     width: 150px;
     text-align: center;
     
 }
 .item2 {
-    border: 3px solid red;
     width: 150px;
     padding: 10px;
     text-align: center;
     
 }
 .item3 {
-    border: 3px solid red;
     width: 150px;
     padding: 10px;
     text-align: center;
 }
 .item4 {
-    border: 3px solid red;
     width: 150px;
     padding: 10px;
     text-align: center;
@@ -150,3 +141,43 @@
     text-align: end;
     margin-top: 20px;
 }
+.last {
+    display: flex;
+    background-color: #3882F6;
+    color: #f9faf8;
+    border-radius: 10px;
+    margin: 80px 150px 80px 150px;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.last-txt1 {
+    font-size: 24px;
+    font-weight: 700;
+}
+.last-txt2 {
+    font-size: 18px;
+}
+
+.motivate-button button {
+    padding: 7px;
+    width: 100px;
+    border-color: white;
+    border-radius: 8px;
+    background-color: #3882F6;
+    color: #f9faf8 ;
+    font-size: 14px;
+}
+
+.footer {
+    background-color: #1F2937;
+    padding: 50px;
+    
+}
+
+.footer p {
+    color: #f9faf8;
+    font-size: 18px;
+    text-align: center;
